--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
     font-family: 'ABeeZee';
   }
 
-.hex {
+.hexagon {
     margin: 0 auto;
     position: relative;
     width: 320px;
@@ -21,17 +21,7 @@
   
  }
 
- .hex-background {
-    position: absolute;
-    background-color: orange; /*color of the main-background*/
-    top: 2px; /* equal to border thickness */
-    left: 2px; /* equal to border thickness */
-    width: 316px; /* container height - (border thickness * 2) */
-    height: 273.12px; /* container height - (border thickness * 2) */
-    -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
-    -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
-    
-}
+
 
 .slideDown {
     top:-40px;
